Revision history for Perl extension File-Find-Rule-Perl

1.06 Mon 13 Apr 2009
	- Upgraded to Module::Install 0.82 (ADAMK)
        - Additional test (without new) (Alexandr Ciornii)
	- We can now use non-curdir() ->in targets (ADAMK)

1.05 Thu 19 Feb 2009
	- Updating to Module::Install 0.79
	- Adding support for no_index exclusions

1.04 Sat 10 May 2008
	- Switching to a production version.
	- Move ->name before ->file to significantly reduce the IO load
	  when running a search.

0.03 Mon 16 Oct 2006
	- Adding support for empty files

0.02 Mon  4 Sep 2006
	- Upgrading to Module::Install 0.64

0.01 Sat  8 Apr 2006
	- Created the initial version of the module